--- a/res/layout/thread.xml
+++ b/res/layout/thread.xml
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
-                    android:text="Send"/>
+                    android:text="@string/Send"/>
 
             </LinearLayout>
         </LinearLayout>
