* fixed new button in incoming messages + option to load only juick images * localization of editing jubo filters

--- a/res/xml/prefs_content.xml
+++ b/res/xml/prefs_content.xml
@@ -33,6 +33,12 @@
                 android:defaultValue="10"
                 android:persistent="true"/>
         <CheckBoxPreference
+                android:key="image.other"
+                android:title="@string/OtherImages"
+                android:summary="@string/OtherImages2"
+                android:defaultValue="true"
+                android:persistent="true"/>
+        <CheckBoxPreference
                 android:key="image.indirect"
                 android:title="@string/IndirectImages"
                 android:summary="@string/Gelbooru"
