--- a/res/layout/fragment_view.xml
+++ b/res/layout/fragment_view.xml
@@ -5,26 +5,43 @@
          android:layout_height="match_parent"
          >
 
-     <ListView android:id="@id/android:list"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:layout_weight="1"
-               android:visibility="invisible"
-               android:fadingEdge="none"
-               android:drawSelectorOnTop="false"/>
 
     <LinearLayout android:id="@id/android:empty"
                   android:layout_width="fill_parent"
-                  android:layout_height="fill_parent"
+                  android:layout_height="wrap_content"
                   android:orientation="vertical"
             >
-        <TextView android:id="@+id/status_text"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="No data"/>
+        <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                >
+            <TextView android:id="@+id/status_text"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:singleLine="false"
+                      android:text="No data"/>
+            <ProgressBar
+                    android:id="@+id/progress_bar_small"
+                    android:layout_width="20sp"
+                    android:visibility="gone"
+                    android:layout_height="20sp"
+                    />
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/cached_copy_label"
+                    android:textColor="#FFA0A000"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:singleLine="true"
+                    android:text="  ----= Cached copy =---- "
+                    />
+        </LinearLayout>
         <FrameLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                android:visibility="visible"
                 >
             <ProgressBar
                     android:id="@+id/progress_bar"
@@ -36,4 +53,20 @@
 
         </FrameLayout>
     </LinearLayout>
+
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/list_container"
+            >
+        <ListView android:id="@id/android:list"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:background="#FF00FF00"
+                  android:visibility="gone"
+                  android:fadingEdge="none"
+                  android:drawSelectorOnTop="false"/>
+    </LinearLayout>
+
  </LinearLayout>
