--- a/res/layout/displaty_chart2.xml
+++ b/res/layout/displaty_chart2.xml
@@ -15,7 +15,7 @@
                 android:padding="5sp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Loading..."
+                android:text="@string/Loading___"
                 android:id="@+id/progress"></TextView>
 
     </LinearLayout>
