mostly working refactored for generic id

--- a/res/xml/prefs_behavior.xml
+++ b/res/xml/prefs_behavior.xml
@@ -60,4 +60,18 @@
             android:persistent="true"/>
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="Debug/Tuning">
+        <CheckBoxPreference
+            android:key="dontWatchPreferences"
+            android:title="Ignore prefs change in main"
+            android:defaultValue="false"
+            android:persistent="true"/>
+        <CheckBoxPreference
+            android:key="dontKeepParsed"
+            android:title="Dont keep parsed messages"
+            android:summary="Saves memory at expense of smoothness"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    </PreferenceCategory>
+
 </PreferenceScreen>
