* more or less done bnw/psto

--- a/res/xml/prefs_sources.xml
+++ b/res/xml/prefs_sources.xml
@@ -107,6 +107,11 @@
             android:defaultValue="false"
             android:persistent="true"/>
         <CheckBoxPreference
+            android:key="msrcPSTOMy"
+            android:title="@string/navigationPSTOMy"
+            android:defaultValue="false"
+            android:persistent="true"/>
+        <CheckBoxPreference
             android:key="msrcPSTOPopular"
             android:title="@string/navigationPSTOPopular"
             android:defaultValue="false"
