--- a/res/menu/xmpp_messages.xml
+++ b/res/menu/xmpp_messages.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/editable_list"
+        android:icon="@drawable/ic_action_edit"
+        android:title="@string/MessagesDeleteMode"
+        android:showAsAction="always"/>
     <item android:id="@+id/menuitem_preferences"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/Settings"
