--- a/res/layout/xmpp_control.xml
+++ b/res/layout/xmpp_control.xml
@@ -22,6 +22,13 @@
                 android:layout_width="fill_parent"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:id="@+id/show_messages"
+                android:text="Нотиф."
+                />
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:id="@+id/gc"
                 android:text="GC"
                 />
