--- a/res/layout-land/message_menu2.xml
+++ b/res/layout-land/message_menu2.xml
@@ -67,7 +67,7 @@
                             android:gravity="left|center_vertical"
                             android:drawableLeft="@drawable/mm_recommend"
                             android:id="@+id/recommend_message"
-                            android:text="!Recomend"
+                            android:text="@string/__Recommend"
                             >
                     </Button>
                     <Button
@@ -77,7 +77,7 @@
                             android:drawableLeft="@drawable/mm_delete"
                             android:layout_weight="1"
                             android:id="@+id/delete_message"
-                            android:text="Delete"
+                            android:text="@string/Delete"
                             >
                     </Button>
                     <Button
@@ -87,7 +87,7 @@
                             android:gravity="left|center_vertical"
                             android:drawableLeft="@drawable/mm_watch"
                             android:id="@+id/subscribe_message"
-                            android:text="Subscribe"
+                            android:text="@string/Subscribe"
                             >
                     </Button>
                     <Button
@@ -97,7 +97,7 @@
                             android:gravity="left|center_vertical"
                             android:drawableLeft="@drawable/mm_unwatch"
                             android:id="@+id/unsubscribe_message"
-                            android:text="Unsubscribe"
+                            android:text="@string/Unsubscribe"
                             >
                     </Button>
                 </LinearLayout>
@@ -114,7 +114,7 @@
                             android:drawableLeft="@drawable/mm_share"
                             android:layout_weight="1"
                             android:id="@+id/share_message"
-                            android:text="Share"
+                            android:text="@string/Share"
                             >
                     </Button>
                     <Button
@@ -124,7 +124,7 @@
                             android:drawableLeft="@drawable/mm_save"
                             android:layout_weight="1"
                             android:id="@+id/save_message"
-                            android:text="Save"
+                            android:text="@string/Save"
                             >
                     </Button>
                     <Button
@@ -134,7 +134,7 @@
                             android:drawableLeft="@drawable/mm_unsave"
                             android:layout_weight="1"
                             android:id="@+id/unsave_message"
-                            android:text="Unsave"
+                            android:text="@string/Unsave"
                             >
                     </Button>
                     <Button
@@ -143,12 +143,13 @@
                             android:layout_weight="1"
                             android:gravity="left|center_vertical"
                             android:id="@+id/open_message"
-                            android:text="Open"
+                            android:text="@string/Open"
                             android:visibility="gone"
                             >
                     </Button>
                 </LinearLayout>
                 <LinearLayout
+                        android:id="@+id/column_3"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -160,7 +161,7 @@
                             android:layout_weight="1"
                             android:gravity="left|center_vertical"
                             android:id="@+id/expand_message"
-                            android:text="Expand"
+                            android:text="@string/Expand"
                             android:visibility="gone"
                             >
                     </Button>
@@ -180,24 +181,10 @@
                             android:gravity="left|center_vertical"
                             android:drawableLeft="@drawable/mm_userpic"
                             android:id="@+id/user_center"
-                            android:text="User center"
+                            android:text="@string/UserCenter"
                             >
                     </Button>
                 </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-                <TextView
-                        android:id="@+id/user_no"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="26sp"
-                        android:text=" @someuser:"
-                        android:visibility="gone"
-                        />
             </LinearLayout>
         </LinearLayout>
 
