--- a/res/layout/update_dialog.xml
+++ b/res/layout/update_dialog.xml
@@ -24,13 +24,25 @@
             android:layout_below="@id/versionCode"
             android:gravity="center"
             android:textColor="#FFFFFFFF"
-            android:text="New testing version of Juick Advanced is available in BETA channel."
+            android:text="@string/NewVersionIsAvailable"
             />
-    <LinearLayout
-            android:layout_below="@id/text"
+    <TextView
+            android:id="@+id/text2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-    </LinearLayout>
+            android:layout_below="@id/text"
+            android:gravity="center"
+            android:textColor="#FFFFFFFF"
+            android:text="@string/RecentChanges"
+            />
+    <TextView
+            android:id="@+id/changes"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text2"
+            android:gravity="center"
+            android:textColor="#FFFFFFFF"
+            android:background="#FF004000"
+            android:text=""
+            />
 </RelativeLayout>
