--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,14 +4,15 @@
         android:icon="@drawable/ic_action_edit"
         android:title="@string/Create"
         android:showAsAction="always"/>
-    <item android:id="@+id/menuitem_search"
-        android:icon="@drawable/ic_action_search"
-        android:title="@string/Search"
-        android:showAsAction="ifRoom"/>
     <item android:id="@+id/reload"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/Refresh"
+        android:showAsAction="always"/>
         android:showAsAction="never"/>
+    <item android:id="@+id/menuitem_search"
+          android:icon="@drawable/ic_action_search"
+          android:title="@string/Search"
+          android:showAsAction="ifRoom"/>
     <item android:id="@+id/menuitem_preferences"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/Settings"
